--- a/.github/workflows/actions_onpush.yaml
+++ b/.github/workflows/actions_onpush.yaml
@@ -17,4 +17,6 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push https://paisleypark3121:$HF_TOKEN@huggingface.co/spaces/StefanoDUrso/Chainlit-docker main
+        run: git add -A
+          git commit --amend --no-edit
+          git push https://paisleypark3121:$HF_TOKEN@huggingface.co/spaces/StefanoDUrso/Chainlit-docker main
