--- a/.github/workflows/actions_onpush.yaml
+++ b/.github/workflows/actions_onpush.yaml
@@ -18,5 +18,5 @@ jobs:
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: git add -A
-          git commit --amend --no-edit
+          git commit -m "adding files"
           git push https://paisleypark3121:$HF_TOKEN@huggingface.co/spaces/StefanoDUrso/Chainlit-docker main
