--- a/.github/workflows/actions_onpush.yaml
+++ b/.github/workflows/actions_onpush.yaml
@@ -18,6 +18,8 @@ jobs:
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
+          git config --global user.email "paysleypark@outlook.it"
+          git config --global user.name "paisleypark3121"
           git add .
           git commit -m "adding files"
           git push https://paisleypark3121:$HF_TOKEN@huggingface.co/spaces/StefanoDUrso/Chainlit-docker main
